--- a/98. Validate Binary Search Tree/98. Validate Binary Search Tree.md
+++ b/98. Validate Binary Search Tree/98. Validate Binary Search Tree.md
@@ -22,3 +22,52 @@ public class Solution {
 
 ## Idea (Iteration)
 * Inorder traveral
+
+
+## Visualization
+For tree
+
+```
+    4
+  2   5
+1  3 
+
+```
+```
+Stack   pre   root 
+4 2 1   null   null
+4 2     null   1
+4 2     1      null
+4       1      2      
+4       2      3  
+4 3     2     null 
+4       2      3     
+4       3      null
+        3      4 
+
+  
+```
+
+
+## Code
+ 
+```
+public class Solution {
+    public boolean isValidBST(TreeNode root) {
+        if( root == null ) return true;
+        Stack<TreeNode> stack = new Stack<>();
+        TreeNode pre = null;
+        while( root != null || !stack.isEmpty() ){
+            while( root != null ){
+                stack.push(root);
+                root = root.left;
+            }
+            root = stack.pop();
+            if( pre != null && root.val <= pre.val ) return false;
+            pre = root;
+            root = root.right;    
+        }
+        return true;
+    }
+}
+```
