--- a/91. Decode Ways/91. Decode Ways.md
+++ b/91. Decode Ways/91. Decode Ways.md
@@ -3,6 +3,7 @@
 * Create a int array to update ways of decoding 
 * dp[0] = 1
 * Keep checking one digit adn two digit combination
+* Give a sample example "12", we have 2 ways od decoding it. Because "1" is between 1 and 9, and 12 is between 10 and 26
 
 ## Time 
 * O(n)
