--- a/78. Subsets/78. Subsets.md
+++ b/78. Subsets/78. Subsets.md
@@ -32,6 +32,7 @@ next element 3 :
 ## Code
 
 ```
+import java.util.*;
 class myCode {
     public static void main (String[] args) throws java.lang.Exception {
         int[] tes = {1,2,3};
@@ -44,22 +45,21 @@ class myCode {
             System.out.println();
         }
     }
-    public List<List<Integer>> subsets(int[] nums){
+    public List<List<Integer>> subsets(int[] nums) {
         List<List<Integer>> res = new ArrayList<>();
-        res.add(new ArrayList<Integer>());
-        
-        for(int i : nums){
-            List<List<Integer>> nextRes = new ArrayList<>();
-            for(List<Integer> oldList :res){
-                List<Integer> newList = new ArrayList<>(oldList);
+        res.add( new ArrayList<>());
+        for( int i : nums ){
+            int size = res.size();
+            for( int j = 0 ; j < size ; j++){
+                List<Integer> newList = new ArrayList<>(res.get(j));
                 newList.add(i);
-                nextRes.add(newList);
+                res.add(newList);
             }
-            res.addAll(nextRes);
         }
         return res;
     }
 }
+
 
 ```
 
@@ -92,3 +92,59 @@ public class Solution {
     }
 }
 ```
+
+## Follow up next() method 
+
+```
+import java.util.*;
+class myCode {
+    public static void main (String[] args) throws java.lang.Exception {
+        int[] tes = {1,2,3};
+        myCode sol = new myCode();
+        List<List<Integer>> result = new ArrayList<>(sol.subsets(tes));
+        for( List<Integer> list : result){
+            for( int i = 0 ; i < list.size(); i++){
+                System.out.print(list.get(i) + ",");
+            }
+            System.out.println();
+        }
+        System.out.println("Using next()");
+        List<Integer> test1 = sol.next(result);
+        for(int num : test1 ){
+            System.out.print(num);
+        }
+        List<Integer> test2 = sol.next(result);
+        for(int num : test2 ){
+            System.out.print(num);
+        }
+        List<Integer> test3 = sol.next(result);
+        for(int num : test3 ){
+            System.out.print(num);
+        }
+
+    }
+    public List<List<Integer>> subsets(int[] nums) {
+        List<List<Integer>> res = new ArrayList<>();
+        res.add( new ArrayList<>());
+        for( int i : nums ){
+            int size = res.size();
+            for( int j = 0 ; j < size ; j++){
+                List<Integer> newList = new ArrayList<>(res.get(j));
+                newList.add(i);
+                res.add(newList);
+            }
+        }
+        return res;
+    }
+    public List<Integer> next(List<List<Integer>> subset){
+        List<Integer> res = subset.get(0);
+        subset.remove(res);
+        return res;
+    }
+}
+
+```
+
+
+
+
