--- a/161. One Edit Distance/161. One Edit Distance.md
+++ b/161. One Edit Distance/161. One Edit Distance.md
@@ -4,6 +4,7 @@
 * Case 1 : abc & adc replace 1 character
 * Case 2 : a b c d  & a c d , delete 1 character delete 1 from s 
 * Case 3 : a b c & a e b c delete 1 from t
+* Case 4 : a b c d & a b c 
 
 ## Code 
 
