--- a/17. Letter Combinations of a Phone Number/17. Letter Combinations of a Phone Number.md
+++ b/17. Letter Combinations of a Phone Number/17. Letter Combinations of a Phone Number.md
@@ -7,7 +7,7 @@
 
 ## Time 
 * (3~4)^n
-* For everr number has 3 or 4 characters to be generated 
+* For every number has 3 or 4 characters to be generated 
 
 
 ## Code 
@@ -27,6 +27,35 @@ public class Solution {
             }
         }
         return res;
+    }
+}
+```
+
+## Idea (DFS & Recurison)
+
+## Code 
+
+```
+public class Solution {
+    private static final String[] keys = new String[] {"0", "1", "abc", "def", "ghi", "jkl", "mno", "pqrs", "tuv", "wxyz"};
+    public List<String> letterCombinations(String digits) {
+        List<String> res = new ArrayList<>();
+        if( digits == null || digits.length() == 0 ) return res;
+        StringBuilder sb = new StringBuilder();
+        dfs(sb,digits,0,res);
+        return res;
+    }
+    private void dfs(StringBuilder sb, String digits, int pos , List<String> res){
+        if( sb.length() >= digits.length()){
+            res.add(sb.toString());
+            return;
+        }
+        String s = keys[digits.charAt(pos) - '0'];
+        int len = sb.length();
+        for( int i = 0 ; i < s.length(); i++ ){
+            dfs(sb.append(s.charAt(i)), digits, pos + 1 , res );
+            sb.setLength(len);
+        }
     }
 }
 ```
