--- a/360. Sort Transformed Array/360. Sort Transformed Array.md
+++ b/360. Sort Transformed Array/360. Sort Transformed Array.md
@@ -9,34 +9,6 @@
 ## Space
 * In space
 
-## Code 
-
-```
-import java.util.*;
-
-class myCode {
-    public static void main (String[] args) throws java.lang.Exception {
-        int[] tes = {-4,-2,2,4};
-        myCode sol = new myCode();
-        int[] res = sol.sortTransArray(tes,1,3,5);
-        for( int i = 0 ; i < res.length ; i++ ){
-            System.out.println(res[i]);
-        }
-    }
-    public int[] sortTransArray(int[] nums, int a , int b, int c ){
-        for( int i = 0 ; i < nums.length; i++ ){
-            nums[i] = calculate(nums[i],a,b,c);
-        }    
-        Arrays.sort(nums);
-        return nums;
-    }
-    private int calculate(int x, int a , int b , int c){
-        return a * x * x + b * x + c;
-    }
-}
-
-```
-
 ## Idea ( reduce time compleixity to o(n))
 * Two pointer
 * Because the array is sorted, the biggest large number is from the start or end
@@ -63,7 +35,45 @@ n, 9 , 15 , 33
 
 ```
 
-## Code
+## Code ( Square )
+
+```
+class myCode {
+    public static void main (String[] args) throws java.lang.Exception {
+        int[] test = new int[]{-4,-1,1,2,3};
+        myCode sol = new myCode();
+        int[] res = sol.sortT(test);
+        for( int i : res ){
+            System.out.print(i + " ");
+        }
+        
+    
+    }
+    public int[] sortT(int[] n){
+        int[] res = new int[n.length];
+        int start = 0;
+        int end = n.length - 1;
+        int i = n.length - 1;
+        while( start <= end){
+            int startN = n[start] * n[start];
+            int endN = n[end] * n[end];
+            if( startN > endN ){
+                res[i--] = startN;
+                start++;
+            } else {
+                res[i--] = endN;
+                end--;
+            } 
+        }
+        return res;
+        
+    }
+    
+}
+
+```
+
+## Code (  ax2 + bx + c )
 
 ```
 public class Solution {
@@ -102,3 +112,34 @@ public class Solution {
 }
 ```
 
+
+
+# Appendix 
+## Code( Brute force)
+
+
+```
+import java.util.*;
+
+class myCode {
+    public static void main (String[] args) throws java.lang.Exception {
+        int[] tes = {-4,-2,2,4};
+        myCode sol = new myCode();
+        int[] res = sol.sortTransArray(tes,1,3,5);
+        for( int i = 0 ; i < res.length ; i++ ){
+            System.out.println(res[i]);
+        }
+    }
+    public int[] sortTransArray(int[] nums, int a , int b, int c ){
+        for( int i = 0 ; i < nums.length; i++ ){
+            nums[i] = calculate(nums[i],a,b,c);
+        }    
+        Arrays.sort(nums);
+        return nums;
+    }
+    private int calculate(int x, int a , int b , int c){
+        return a * x * x + b * x + c;
+    }
+}
+
+```
