--- a/253. Meeting Rooms II/253. Meeting Rooms II.md
+++ b/253. Meeting Rooms II/253. Meeting Rooms II.md
@@ -1,7 +1,7 @@
 # 253. Meeting Rooms II
 
 ## Idea 
-* When we need extra room, end event occurs and there is a starting event happened before that( generate overlapping)
+* When we need extra room, end event occurs and there is a starting event happened before that ( generate overlapping)
 * Create two array ( start and end ) and sort it
 * Meeting that started which haven't end yet have to be put into differernt rooms 
 * Create a variable "current end time" to point to the current  end event, and move the start event pointer  
@@ -36,14 +36,14 @@ public class Solution {
         for(int i=0; i<intervals.length;i++){
             start[i] = intervals[i].start;
             end[i] = intervals[i].end;
-        } 
+        }
         Arrays.sort(start);
         Arrays.sort(end);
         int count = 0;
-        int e = 0; 
+        int curEnd = 0; 
         for( int i = 0 ; i < start.length ; i++){
-            if( start[i] < end[e]) count++;
-            else e++;
+            if( start[i] < end[curEnd]) count++;
+            else curEnd++;
         }
         return count;
     }
@@ -54,6 +54,66 @@ public class Interval {
      int end;
      Interval() { start = 0; end = 0; }
      Interval(int s, int e) { start = s; end = e; }
+}
+
+```
+
+## Follow up ( Most frequent elements in intervals)
+
+```
+/* package whatever; // don't place package name! */
+
+import java.io.*;
+import java.util.*;
+
+class myCode {
+    public static void main (String[] args) throws java.lang.Exception {
+        Interval[] test = new Interval[3];
+        test[0] = new Interval(1,2);
+        test[1] = new Interval(0,3);
+        test[2] = new Interval(0,4);
+        
+        myCode sol = new myCode();
+        
+        int res = sol.mostFrequentElement(test);
+        System.out.print(res);
+
+
+    
+    }
+    public int mostFrequentElement(Interval[] intervals){
+        int max = Integer.MIN_VALUE;
+        int res = Integer.MIN_VALUE;
+        int[] start = new int[intervals.length];
+        int[] end = new int[intervals.length];
+        for(int i = 0 ; i < intervals.length; i++){
+            start[i] = intervals[i].start;
+            end[i] = intervals[i].end;
+        }
+        Arrays.sort(start);
+        Arrays.sort(end);
+        
+        // check
+        int count = 0;
+        int curEnd = 0;
+        for( int i = 0 ; i < start.length ; i++){
+            if( start[i] < end[curEnd]){
+                count++;
+                if( count > max ){
+                    max = count;
+                    res = start[i];
+                }
+            } else curEnd++;
+        }
+        return res;
+    }    
+}
+
+class Interval {
+    int start;
+    int end;
+    Interval() { start = 0; end = 0; }
+    Interval(int s, int e) { start = s; end = e; }
 }
 
 ```
