--- a/300. Longest Increasing Subsequence/300. Longest Increasing Subsequence.md
+++ b/300. Longest Increasing Subsequence/300. Longest Increasing Subsequence.md
@@ -4,10 +4,19 @@
 * Time O(n^2)
 
 ## Idea ( DP + Binary search)
-* Scan from 0 to len - 1, use dp array to keep the longest sequence
-* If the val is bigger than the largest in the dp array, add it to the end
-* If it is among the sequence, return the posisiton that bigger than previous, update the array with this position 
+* Tails is an int array storing the smallest tail of all increasing subsequences with length i+1 in tails[i].
 
+```
+For example, say we have nums = [4,5,6,3], then all the available increasing subsequences are:
+
+len = 1   :      [4], [5], [6], [3]   => tails[0] = 3
+len = 2   :      [4, 5], [5, 6]       => tails[1] = 5
+len = 3   :      [4, 5, 6]            => tails[2] = 6
+
+```
+* We can easily prove that tails is a increasing array. Therefore it is possible to do a binary search in tails array to find the one needs update.
+* Case 1 : if current number is larger than all tails, append it, increase the size by 1
+* Case 2 : if tails[i-1] < x <= tails[i], update tails[i]
 
 ## Time
 * O(nlogn)
@@ -16,16 +25,21 @@
 ## Visualization 
 
 ```
-10, 9, 2, 5, 3, 7, 101, 18
+For intput 5,6,3,8,9,-1,0,1,2,3,4
 
-10 
-9
-2
-2,5
-2,3
-2,3,7
-2,3,7,101
-2,3,7,18
+left right 
+0      0 -> 1     5
+0      1 -> 2    5, 6
+0      2 -> 3    5, 6 ,8       
+0      3 -> 4    5 , 6, 8, 9 
+0      num = -1 mid = 2 -> mid = 1 -> mid = 0 
+0      4        -1 , 6, 8, 9 
+0      num = 0, mid = 1      
+0      4        -1, 1 ,8 ,9 
+                -1, 1 , 2 ,9  
+       5          -1, 1 , 2 , 3 ,4  
+
+
 
 ```
 
@@ -35,34 +49,20 @@
 ```
 public class Solution {
     public int lengthOfLIS(int[] n) {
-        if(n == null || n.length == 0 ) return 0;
-        int[] dp = new int[n.length];
-        dp[0] = n[0];
-        int len = 0;
-        for( int i = 1; i < n.length; i++){
-            int pos = bs(dp,len,n[i]);
-            if(n[i]<dp[pos]) dp[pos] = n[i];
-            if(pos>len){
-                len = pos;
-                dp[len] = n[i];
+        int[] tail = new int[n.length];
+        int count = 0;
+        for( int num : n ){
+            int left = 0 , right = count;
+            while( left != right  ){
+                int mid = left + (right - left ) / 2;
+                if( tail[mid] < num ){
+                    left = mid + 1;
+                } else right = mid;
             }
+            tail[left] = num;
+            if( left == count ) ++count;
         }
-        return len+1;
-    }
-    private int bs(int[] arr, int len, int target){
-        int l = 0;
-        int r = len;
-        while( l + 1 < r){
-            int m = l + (r - l) /2;
-            if(arr[m] == target) return m;
-            else{
-                if(arr[m] < target) l = m;
-                else r = m;
-            }
-        }
-        if(arr[r] < target) return len+1;
-        else if (arr[l] >= target) return l;
-        else return r;
+        return count;
     }
 }
 ```
