--- a/33. Search in Rotated Sorted Array/33. Search in Rotated Sorted Array.md
+++ b/33. Search in Rotated Sorted Array/33. Search in Rotated Sorted Array.md
@@ -17,6 +17,7 @@ public class Solution {
         while( i <= j ){
             int m = i + ( j - i ) / 2;
             if( n[m] == target ) return m;
+            // left haft is sorted 
             if( n[i] <= n[m] ){
                 if( target < n[m] && target >= n[i]){
                     j = m - 1;
