--- a/283. Move Zeroes/283. Move Zeroes.md
+++ b/283. Move Zeroes/283. Move Zeroes.md
@@ -1,14 +1,38 @@
 # 283. Move Zeroes
 
+## Idea 
+* Move every zero in the front
+
 ## Code
 ```
-public class Solution {
+ppublic class Solution {
     public void moveZeroes(int[] nums) {
+        if( nums == null || nums.length == 0 ) return;
         int index = 0;
         for (int i = 0; i < nums.length ; i++){
             if (nums[i] != 0) nums[index++] = nums[i];
         }
         while (index < nums.length) nums[index++] = 0;
+    }
+}
+```
+
+## Idea ( swap )
+
+## Code 
+```
+public class Solution {
+    public void moveZeroes(int[] nums) {
+        if( nums == null || nums.length == 0 ) return;
+        int index = 0;
+        for( int i = 0 ; i < nums.length ; i++){
+            if( nums[i] != 0 ){
+                int temp = nums[index];
+                nums[index] = nums[i];
+                nums[i] = temp;
+                index++;
+            }
+        }
     }
 }
 ```
