--- a/209. Minimum Size Subarray Sum/209. Minimum Size Subarray Sum.md
+++ b/209. Minimum Size Subarray Sum/209. Minimum Size Subarray Sum.md
@@ -25,3 +25,22 @@ public class Solution {
     }
 }
 ```
+
+## Code ( return boolean)
+
+
+```
+  public boolean minSubArrayLen(int[] nums, int s)  {
+        if( nums == null || nums.length == 0) return false;
+        int pre = 0 , cur = 0 , sum = 0;
+        while( cur < nums.length ){
+            sum += nums[cur++];
+            if( sum == s) return true;
+            while(sum >= s){
+                sum -= nums[pre++];
+            }
+        }
+        return false;
+    }v
+
+```
