--- a/257. Binary Tree Paths/257. Binary Tree Paths.md
+++ b/257. Binary Tree Paths/257. Binary Tree Paths.md
@@ -40,6 +40,9 @@ public class Solution {
 ## Idea ( Use Stringbuilder)
 * Every add of stringbuilder is amortized O(1)
 
+## Time 
+* Worst case for print the path (balanced tree ) O(nlog(n)) 
+
 ## Code
 
 ```
