--- a/283. Move Zeroes/283. Move Zeroes.md
+++ b/283. Move Zeroes/283. Move Zeroes.md
@@ -36,3 +36,32 @@ public class Solution {
     }
 }
 ```
+
+
+## Code ( two pointers & minium writes )
+
+```
+public int moveZeros(int[] nums) {
+                int left = 0, right = nums.length - 1;
+                while (left < right) {
+                        if (nums[left] != 0) {
+                                left++;
+                                continue;
+                        }
+                        while (left < right) {
+                                if (nums[right] != 0) {
+                                        break;
+                                }
+                                right--;
+                        }
+                        if (left < right) {
+                                nums[left] = nums[right];
+                                left++;
+                                right--;
+                        }
+                }
+               
+                return left;
+        }
+
+```
