--- a/75. Sort Colors/75. Sort Colors.md
+++ b/75. Sort Colors/75. Sort Colors.md
@@ -40,3 +40,36 @@ public class Solution {
 }
 
 ```
+## Idea
+* Sort 0, 1 ~ ( k  - 2 ), k - 1
+* sort 1, 2 - ( k - 3 ), k - 2 
+
+
+## Code ( sort k )
+
+```
+public void sortKCategory(int[] nums, int k) {
+        //assume getCat returns 1, ...k
+        int left = 0;
+        int right = nums.length - 1;
+        int cur = 0;
+        int min = 1, max = k;
+        while (min < max) {
+            while (cur <= right) {
+                if (getCat(nums[cur]) == min) {
+                    swap(nums, left, cur);
+                    cur++;
+                    left++;
+                } else if (getCat(nums[cur]) == max) {
+                    swap(nums, right, cur);
+                    right--;
+                } else {
+                    cur++;
+                }
+            }
+            cur = left;
+            min++;
+            max--;
+        }
+    }
+```
