--- a/15. 3Sum/15. 3Sum.md
+++ b/15. 3Sum/15. 3Sum.md
@@ -160,3 +160,45 @@ public class Solution {
 }
 
 ```
+
+
+## Code ( Backtracking )
+
+```
+
+public class Solution {
+    public static void main(String[] args) {
+        int[] test = new int[]{1,2,3,4,5};
+        Solution sol = new Solution();
+        boolean res = sol.kSum(test,5,15000);
+        System.out.print(res);
+    }
+
+    public boolean kSum(int num[], int k, int target) {
+        if (num == null || num.length == 0) {
+            return false;
+        }
+        helper(num,k,target,0,0);
+
+        if(flag) return  true;
+        else return false;
+    }
+
+    boolean flag = false;
+    private void helper(int num[], int k, int target, int pos, int count) {
+        if( count > k ) return;
+        if( count == k ){
+            if( target == 0 ){
+                flag = true;
+            }
+            return;
+        }
+        for( int i = pos ; i < num.length; i ++){
+            helper(num,k,target-num[pos],i,count+1);
+        }
+
+    }
+}
+
+
+```
